version 1.1.0
- Extend DATAINFO structure -- allow specification of "display
  names" for variables (these are shown in graphs)
- Provide "label" command for setting the description and/or
  display name for a variable
- Add script commands for saving and displaying models and
  graphs 
- Improvements to the gretl console (command history, etc.)
- Add the Johansen cointegration test to the gui menus
- Add option to use QR decomposition instead of Cholesky for
  calculating regression results
- Fix bug: periodogram command failed in batch mode
- Make uniform() PRNG generate in the standard range 0-1
  (rather than 1-100, as it was previously)
- Small modifications to path-searching
- Updates to the Spanish help files
- Allow access to RATS databases via command line and scripts
- Clean-up: remove all wasted array elements
- Update to libtool 1.5

05/26/03 version 1.0.9
- Add non-linear least squares ("nls" command, Levenberg-
  Marquandt algorithm from minpack, with either analytical or
  numerical derivatives)
- Fix focus bug when editing the description for a variable in
  the gretl main window
- Add a new means of grabbing fitted values from a regression:
  "genr newname = yhat" (parallels "uhat")
- Updates to manual (includes details on new nls command)
- Spanish version: provide access to English help files as well
  as Spanish
- Add rudimentary scripting capacity to gnuplot command (can
  append "{ ... }" block to gretl gnuplot command, containing
  literal gnuplot command lines, each terminated with ";")

05/02/03 version 1.0.8
- Require lapack
- Fixes to build for Mac OS X
- Avoid duplication of "against time" in model graph menus, when 
  time is included as a regressor
- Fix bugs in Find dialog
- Correct function that detects whether or not series should be
  scaled for time series graphing (case of negative values)
- Fix bug in boxplots with boolean conditions attached
- Ensure all plot windows are not resizable